# astra-claw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
astra_claw/: __main__.py  config.py  constants.py  llm.py  memory.py  session.py  soul.py
astra_claw/agent/: context_compactor.py  events.py  loop.py  prompt_builder.py  streaming.py  title_generator.py  tool_runner.py
astra_claw/cli/: __init__.py  commands.py  repl.py  tool_display.py  ui.py
astra_claw/tools/: clarify_tool.py  file_tools.py  memory_tool.py  patch_tool.py  path_safety.py  registry.py  search_tool.py  session_search_tool.py  shell_tool.py  todo_tool.py  web_tools.py
docs/: RELEASE_v0.2.md  progress.md  tech_spec.md  testing.md
scripts/: smoke_feedback_ui.py  smoke_title.py
tests/: test_features.py  test_memory.py  test_session.py  test_soul.py  test_workspace.py
tests/agent/: test_context_compactor.py  test_events.py  test_loop.py  test_title_generator.py  test_tool_runner_clarify.py
tests/cli/: test_commands.py  test_repl.py  test_repl_clarify.py  test_tool_display.py
tests/tools/: test_clarify_tool.py  test_file_tools.py  test_memory_tool.py  test_patch_tool.py  test_search_tool.py  test_session_search_tool.py  test_shell_tool.py  test_todo_tool.py  test_web_tools.py
