[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-claw"
version = "0.2.6"
description = "AI agent with tool calling capabilities"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.scripts]
astraclaw = "astra_claw.__main__:main"
